<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">LoCAR</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="adicionar_cliente">Adicionar Cliente</string>
    <string name="adicionar_automovel">Adicionar Automóvel</string>
    <string name="nome">Nome</string>
    <string name="telefone">Telefone</string>
    <string name="salvar">Salvar</string>
    <string name="cancelar">Cancelar</string>
    <string name="modelo">Modelo</string>
    <string name="ano">Ano</string>
    <string name="preco">Preço</string>
    <string name="placa">Placa</string>
    <string name="adicionar">Adicionar</string>
    <string name="adicionar_locacao">Adicionar Locação</string>
    <string name="remover_cliente">Remover Cliente</string>
    <string name="nome_do_cliente">Nome do Cliente</string>
    <string name="telefone_do_cliente">Telefone do Cliente</string>
    <string name="endereco">Endereco</string>
    <string name="endereco_do_cliente">Endereço do Cliente</string>
    <string name="modelo_do_automovel">Modelo do Automóvel</string>
    <string name="ano_do_automovel">Ano  do Automóvel</string>
    <string name="placa_do_automovel">Placa do Automóvel</string>
    <string name="preco_do_automovel">Preço do Automóvel</string>
    <string name="locacoes">Locações</string>
    <string name="data_do_aluguel">Data do Aluguel</string>
    <string name="clientes">Clientes</string>
    <string name="automoveis">Automóveis</string>


</resources>
