<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="top|center_vertical"
    android:orientation="vertical"
    android:paddingLeft="5dp"
    android:paddingRight="5dp" >

    <TextView
        android:id="@+id/str_nome"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/nome"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/cmp_nome"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/nome_do_cliente"
        android:inputType="textPersonName" />

    <TextView
        android:id="@+id/str_telefone"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/telefone"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/cmp_telefone"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/telefone_do_cliente"
        android:inputType="phone" />

    <TextView
        android:id="@+id/str_endereco"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/endereco"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/cmp_endereco"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/endereco_do_cliente"
        android:inputType="text" />
</LinearLayout>