<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/item2"
        android:enabled="true"
        android:menuCategory="container"
        android:showAsAction="ifRoom|withText"
        android:title="@string/adicionar"
        android:visible="true">
        <menu>
            <item
                android:id="@+id/ab_adicionar_cliente"
                android:enabled="true"
                android:showAsAction="ifRoom"
                android:title="@string/adicionar_cliente">
            </item>
            <item
                android:id="@+id/ab_adicionar_automovel"
                android:enabled="true"
                android:showAsAction="ifRoom"
                android:title="@string/adicionar_automovel">
            </item>
<!--
            <item
                android:id="@+id/ab_adicionar_locacao"
                android:enabled="true"
                android:showAsAction="ifRoom"
                android:title="@string/adicionar_locacao">
            </item>
 -->
        </menu>
    </item>

</menu>