<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="top|center_vertical"
    android:orientation="vertical"
    android:paddingLeft="5dp"
    android:paddingRight="5dp" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nome_do_cliente"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/str_nome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/telefone_do_cliente"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/str_telefone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:text="@string/locacoes"
        android:textSize="40sp"
        android:textStyle="italic" />

    <ListView
        android:id="@+id/locacoes_cliente"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:dividerHeight="@dimen/activity_horizontal_margin" >

    </ListView>

</LinearLayout>
