<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="top|center_vertical"
    android:orientation="vertical"
    android:paddingLeft="5dp"
    android:paddingRight="5dp" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.25"
            android:text="@string/modelo_do_automovel"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/cmp_modelo"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.25" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.25"
            android:text="@string/placa_do_automovel"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/cmp_placa"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.25" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.25"
            android:text="@string/data_do_aluguel"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/cmp_data_locacao"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.25" />
    </LinearLayout>

</LinearLayout>